--- a/ovp/apps/core/templates/default/email/contactForm.html
+++ b/ovp/apps/core/templates/default/email/contactForm.html
@@ -1,4 +1,4 @@
-          {% extends 'email/base.html' %}
+          {% extends extend.html %}
             {% block content %}
               <p>Hello! Someone sent you a message through the contact form.</p>
 
