--- a/ovp/apps/users/templates/default/email/recoveryToken.html
+++ b/ovp/apps/users/templates/default/email/recoveryToken.html
@@ -1,4 +1,4 @@
-{% extends "email/base.html" %}
+{% extends extend.html %}
 
 {% block content %}
 Hello, you're receiving this email because you requested password recovery.<br>
