Extend all email templates from base

--- a/ovp/apps/organizations/templates/default/email/userInvited-toUser.html
+++ b/ovp/apps/organizations/templates/default/email/userInvited-toUser.html
@@ -1,1 +1,5 @@
-You are invited to organization {{invite.organization.name}}. Click here to join.
+{% extends extend.html %}
+
+{% block content %}
+  You are invited to organization {{invite.organization.name}}. Click here to join.
+{% endblock %}
