--- a/ovp/apps/core/templates/default/email/contactForm.html
+++ b/ovp/apps/core/templates/default/email/contactForm.html
@@ -1,12 +1,13 @@
-          {% extends extend.html %}
-            {% block content %}
-              <p>Hello! Someone sent you a message through the contact form.</p>
+{% extends extend.html %}
 
-							<p>
-								Name: {{name}}<br>
-								Email: {{email}}<br>
-								Phone: {{phone}}<br>
-							</p>
+{% block content %}
+  <p>Hello! Someone sent you a message through the contact form.</p>
 
-							<p>{{message}}</p>
-            {% endblock content %}
+  <p>
+    Name: {{name}}<br>
+    Email: {{email}}<br>
+    Phone: {{phone}}<br>
+  </p>
+
+  <p>{{message}}</p>
+{% endblock %}
