--- a/ovp/apps/organizations/templates/default/email/organizationPublished.html
+++ b/ovp/apps/organizations/templates/default/email/organizationPublished.html
@@ -1,1 +1,5 @@
-Your organization was published.
+{% extends extend.html %}
+
+{% block content %}
+  Your organization was published.
+{% endblock %}
