--- a/ovp/apps/organizations/templates/default/email/userInvited-toOwner.html
+++ b/ovp/apps/organizations/templates/default/email/userInvited-toOwner.html
@@ -1,1 +1,5 @@
-User {{invite.invited.name}} ({{invite.invited.email}}) was invited to the organization {{invite.organization.name}} by {{invite.inviter.name}}.
+{% extends extend.html %}
+
+{% block content %}
+  User {{invite.invited.name}} ({{invite.invited.email}}) was invited to the organization {{invite.organization.name}} by {{invite.inviter.name}}.
+{% endblock %}
