--- a/ovp/apps/organizations/templates/default/email/userInvited-toOwnerInviter.html
+++ b/ovp/apps/organizations/templates/default/email/userInvited-toOwnerInviter.html
@@ -1,1 +1,5 @@
-You invited {{invited.name}} to organization {{organization.name}}.
+{% extends extend.html %}
+
+{% block content %}
+  You invited {{invited.name}} to organization {{organization.name}}.
+{% endblock %}
