--- a/ovp/apps/organizations/templates/default/email/userInvitedRevoked-toOwner.html
+++ b/ovp/apps/organizations/templates/default/email/userInvitedRevoked-toOwner.html
@@ -1,1 +1,5 @@
-The invitation for user {{invited.user.name}} ({{invited.user.email}}) to join organization {{invite.organization.name}} has been revoked.
+{% extends extend.html %}
+
+{% block content %}
+  The invitation for user {{invited.user.name}} ({{invited.user.email}}) to join organization {{invite.organization.name}} has been revoked.
+{% endblock %}
