--- a/ovp/apps/organizations/templates/default/email/userInvitedRevoked-toUser.html
+++ b/ovp/apps/organizations/templates/default/email/userInvitedRevoked-toUser.html
@@ -1,1 +1,5 @@
-You invitation to {{invite.organization.name}} has been revoked.
+{% extends extend.html %}
+
+{% block content %}
+  You invitation to {{invite.organization.name}} has been revoked.
+{% endblock %}
