--- a/ovp/apps/organizations/templates/default/email/userJoined-toUser.html
+++ b/ovp/apps/organizations/templates/default/email/userJoined-toUser.html
@@ -1,1 +1,5 @@
-You joined organization {{organization.name}}.
+{% extends extend.html %}
+
+{% block content %}
+  You joined organization {{organization.name}}.
+{% endblock %}
