--- a/ovp/apps/organizations/templates/default/email/userLeft-toOwner.html
+++ b/ovp/apps/organizations/templates/default/email/userLeft-toOwner.html
@@ -1,1 +1,5 @@
-User {{user.name}} ({{user.email}}) has left your organization {{organization.name}}.
+{% extends extend.html %}
+
+{% block content %}
+  User {{user.name}} ({{user.email}}) has left your organization {{organization.name}}.
+{% endblock %}
