--- a/ovp/apps/organizations/templates/default/email/userLeft-toUser.html
+++ b/ovp/apps/organizations/templates/default/email/userLeft-toUser.html
@@ -1,1 +1,5 @@
-You have left organization {{organization.name}}.
+{% extends extend.html %}
+
+{% block content %}
+  You have left organization {{organization.name}}.
+{% endblock %}
