--- a/ovp/apps/organizations/templates/default/email/userRemoved-toOwner.html
+++ b/ovp/apps/organizations/templates/default/email/userRemoved-toOwner.html
@@ -1,1 +1,5 @@
-You have been removed from organization {{organization.name}}.
+{% extends extend.html %}
+
+{% block content %}
+  You have been removed from organization {{organization.name}}.
+{% endblock %}
