--- a/ovp/apps/organizations/templates/default/email/userRemoved-toUser.html
+++ b/ovp/apps/organizations/templates/default/email/userRemoved-toUser.html
@@ -1,1 +1,5 @@
-You removed user {{user.name}} ({{user.email}}) from your organization {{organization.name}}.
+{% extends extend.html %}
+
+{% block content %}
+  You removed user {{user.name}} ({{user.email}}) from your organization {{organization.name}}.
+{% endblock %}
