--- a/ovp/apps/projects/templates/default/email/projectClosed.html
+++ b/ovp/apps/projects/templates/default/email/projectClosed.html
@@ -1,1 +1,5 @@
-You project <b>{{project.name}}</b> was closed.
+{% extends extend.html %}
+
+{% block content %}
+  You project <b>{{project.name}}</b> was closed.
+{% endblock %}
