--- a/ovp/apps/projects/templates/default/email/projectCreated.html
+++ b/ovp/apps/projects/templates/default/email/projectCreated.html
@@ -1,1 +1,5 @@
-Project <b>{{project.name}}</b> was created.
+{% extends extend.html %}
+
+{% block content %}
+  Project <b>{{project.name}}</b> was created.
+{% endblock %}
