--- a/ovp/apps/projects/templates/default/email/volunteerApplied-ToOwner.html
+++ b/ovp/apps/projects/templates/default/email/volunteerApplied-ToOwner.html
@@ -1,2 +1,6 @@
-New volunteer applied to <b>{{apply.project.name}}</b>.
+{% extends extend.html %}
 
+{% block content %}
+  New volunteer applied to <b>{{apply.project.name}}</b>.
+
+{% endblock %}
