--- a/ovp/apps/projects/templates/default/email/volunteerUnapplied-ToOwner.html
+++ b/ovp/apps/projects/templates/default/email/volunteerUnapplied-ToOwner.html
@@ -1,1 +1,5 @@
-Volunteer unapplied from <b>{{apply.project.name}}</b>.
+{% extends extend.html %}
+
+{% block content %}
+  Volunteer unapplied from <b>{{apply.project.name}}</b>.
+{% endblock %}
