--- a/ovp/apps/projects/templates/default/email/volunteerUnapplied-ToVolunteer.html
+++ b/ovp/apps/projects/templates/default/email/volunteerUnapplied-ToVolunteer.html
@@ -1,1 +1,5 @@
-You have unapplied from <b>{{apply.project.name}}</b>.
+{% extends extend.html %}
+
+{% block content %}
+  You have unapplied from <b>{{apply.project.name}}</b>.
+{% endblock %}
