GPA related stuff

--- a/ovp/apps/admin/templates/admin/indicators.html
+++ b/ovp/apps/admin/templates/admin/indicators.html
@@ -63,11 +63,11 @@
   <div class="indicator-row">
     <div class="indicator-col">
       <h1 class="indicator-value">{{ module.projects_count }}</h1>
-      <p class="indicator-label">Vagas cadastradas</p>
+      <p class="indicator-label">Ações cadastradas</p>
     </div>
     <div class="indicator-col">
       <h1 class="indicator-value">{{ module.projects_published_count }}</h1>
-      <p class="indicator-label">Vagas publicadas</p>
+      <p class="indicator-label">Ações publicadas</p>
     </div>
   </div>
 
@@ -98,11 +98,11 @@
   <div class="indicator-row">
     <div class="indicator-col">
       <h1 class="indicator-value">{{ module.month_projects_count }}</h1>
-      <p class="indicator-label">Vagas cadastradas</p>
+      <p class="indicator-label">Ações cadastradas</p>
     </div>
     <div class="indicator-col">
       <h1 class="indicator-value">{{ module.month_projects_published_count }}</h1>
-      <p class="indicator-label">Vagas publicadas</p>
+      <p class="indicator-label">Ações publicadas</p>
     </div>
   </div>
 
