--- a/ovp/apps/admin/templates/admin/indicators.html
+++ b/ovp/apps/admin/templates/admin/indicators.html
@@ -45,10 +45,28 @@
     text-transform: uppercase;
     display: block;
   }
+
+  a.filter-indicators {
+    color: #fff !important;
+  }
+
+  .indicators-filter-popup {
+    position: absolute;
+    background: #fff;
+    display: none;
+    top: 0px;
+    left: 0px;
+    border-radius: 6px;
+    box-shadow: 0 0 0.28571rem 0 rgba(71,186,193,0.75);
+  }
 </style>
 <div>
   <div class="indicator-header">
-    <h4>Números totais</h4>
+    <h4>Números {% if module.date_min or module.date_max %}parciais{% else %}totais{% endif %}
+      <a href="#" class="filter-indicators">
+        <span class="icon-calendar float-right"></span>
+      </a>
+    </h4>
   </div>
   <div class="indicator-row">
     <div class="indicator-col">
@@ -70,7 +88,6 @@
       <p class="indicator-label">Ações publicadas</p>
     </div>
   </div>
-
   <div class="indicator-row">
     <div class="indicator-col">
       <h1 class="indicator-value">{{ module.users_count }}</h1>
@@ -81,39 +98,81 @@
       <p class="indicator-label">Voluntários inscritos</p>
     </div>
   </div>
-
-  <div class="indicator-header">
-    <h4>Números dos últimos 30 dias</h4>
-  </div>
   <div class="indicator-row">
     <div class="indicator-col">
-      <h1 class="indicator-value">{{ module.month_organizations_count }}</h1>
-      <p class="indicator-label">ONGs cadastradas</p>
+      <h1 class="indicator-value">{{ module.applies_count_distinct }}</h1>
+      <p class="indicator-label">Voluntários únicos inscritos</p>
     </div>
     <div class="indicator-col">
-      <h1 class="indicator-value">{{ module.month_organizations_published_count }}</h1>
-      <p class="indicator-label">ONGs publicadas</p>
-    </div>
-  </div>
-  <div class="indicator-row">
-    <div class="indicator-col">
-      <h1 class="indicator-value">{{ module.month_projects_count }}</h1>
-      <p class="indicator-label">Ações cadastradas</p>
-    </div>
-    <div class="indicator-col">
-      <h1 class="indicator-value">{{ module.month_projects_published_count }}</h1>
-      <p class="indicator-label">Ações publicadas</p>
-    </div>
-  </div>
-
-  <div class="indicator-row">
-    <div class="indicator-col">
-      <h1 class="indicator-value">{{ module.month_users_count }}</h1>
-      <p class="indicator-label">Usuários</p>
-    </div>
-    <div class="indicator-col">
-      <h1 class="indicator-value">{{ module.month_applies_count }}</h1>
-      <p class="indicator-label">Voluntários inscritos</p>
+      <h1 class="indicator-value">{{ module.benefited_people_count }}</h1>
+      <p class="indicator-label">Pessoas beneficiadas</p>
     </div>
   </div>
 </div>
+
+<div class="indicators-filter-popup">
+  <form method="GET" action="." id="indicators-date-form">
+    <fieldset class="module aligned">
+      <div class="form-row ">
+        <div>
+          <input type="text" class="vDateField" name="indicator__gte" size="10" placeholder="From date" id="id_indicator__gte"></input>
+        </div>
+      </div>
+
+      <div class="form-row ">
+        <div>
+          <input type="text" class="vDateField" name="indicator__lte" size="10" placeholder="To date" id="id_indicator__lte"></input>
+        </div>
+      </div>
+      <div class="controls">
+        <input type="button" value="Buscar" onclick="datefilter_apply(event, 'indicators-date-query-string', 'indicators-date-form')">
+        <input type="reset" class="button" value="Reset" onclick="datefilter_reset('indicators-date-query-string')">
+      </div>
+    </fieldset>
+  </form>
+</div>
+
+<script>
+  function datefilter_apply(event, qs_name, form_name){
+    event.preventDefault();
+    var form_data = jQuery('#'+form_name).serialize();
+    window.location = window.location.pathname + '?' + form_data;
+  }
+  function datefilter_reset(qs_name){
+    window.location = window.location.pathname;
+  }
+</script>
+
+<script>
+  function defer(method) {
+    if (window.jQuery) {
+        method();
+    } else {
+        setTimeout(function() { defer(method) }, 50);
+    }
+  }
+
+  defer(function () {
+    var $ = jQuery;
+
+    function setPosition(popup, event) {
+      var offset = $(event.target).offset()
+      popup.css({left: offset.left - 10, top: offset.top + 20})
+    }
+
+    $(document).ready(function() {
+      var popup = $(".indicators-filter-popup");
+      $("#id_indicator__gte, #id_indicator__lte").datepicker('option', 'dateFormat', 'yy-mm-dd');
+
+      $(".filter-indicators").click(function(e) {
+        if (popup.is(":visible")) {
+          popup.hide();
+        } else {
+          popup.show();
+          setPosition(popup, e);
+        }
+      })
+    })
+  });
+
+</script>
