Add total vacancies to indicators panel

--- a/ovp/apps/admin/templates/admin/indicators.html
+++ b/ovp/apps/admin/templates/admin/indicators.html
@@ -108,6 +108,14 @@
       <p class="indicator-label">Pessoas beneficiadas</p>
     </div>
   </div>
+  <div class="indicator-row">
+    <div class="indicator-col">
+      <h1 class="indicator-value">{{ module.vacancies }}</h1>
+      <p class="indicator-label">Vagas totais</p>
+    </div>
+    <div class="indicator-col">
+    </div>
+  </div>
 </div>
 
 <div class="indicators-filter-popup">
@@ -174,5 +182,4 @@
       })
     })
   });
-
 </script>
